kubernetes/auth-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend-deployment
  labels:
    app: auth-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-backend
  template:
    metadata:
      labels:
        app: auth-backend
    spec:
      containers:
      - name: auth-backend
        image: 
        ports: 457436777387.dkr.ecr.eu-west-1.amazonaws.com/auth-backend:latest
        - containerPort: 3002
