kubernetes/thestuffer-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thestuffer-backend-deployment
  labels:
    app: thestuffer-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thestuffer-backend
  template:
    metadata:
      labels:
        app: thestuffer-backend
    spec:
      imagePullSecrets:
        - name: awsecr-cred
      containers:
        - name: thestuffer-backend
          image: 457436777387.dkr.ecr.eu-west-1.amazonaws.com/thestuffer-backend:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: thestuffer-backend-service
spec:
  selector:
    app: thestuffer-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
