kubernetes/thestuffer-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thestuffer-frontend-deployment
  labels:
    app: thestuffer-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thestuffer-frontend
  template:
    metadata:
      labels:
        app: thestuffer-frontend
    spec:
      imagePullSecrets:
        - name: awsecr-cred
      containers:
        - name: thestuffer-backend
          image: 457436777387.dkr.ecr.eu-west-1.amazonaws.com/thestuffer-frontend:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: thestuffer-frontend-service
spec:
  selector:
    app: thestuffer-frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
