kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thestuffer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: thestuffer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thestuffer-frontend
                port:
                  number: 8080
